--- a/dotfiles/alacritty.toml
+++ b/dotfiles/alacritty.toml
@@ -2,7 +2,7 @@
 
 [window]
 
-opacity = .3
+opacity = 0.6
 blur = true
-dimensions = { columns = 10, lines = 10 }
-decorations = "None"
+dimensions = { columns = 80, lines = 15 }
+decorations = "Full"
